@@ -24,6 +24,14 @@
 #include "trad-frame.h"
 #include "regcache.h"
 
+struct trad_frame_cache
+{
+  struct frame_info *next_frame;
+  CORE_ADDR this_base;
+  struct trad_frame_saved_reg *prev_regs;
+  struct frame_id this_id;
+};
+
 struct trad_frame_cache *
 trad_frame_cache_zalloc (struct frame_info *next_frame)
 {
@@ -31,6 +39,7 @@ trad_frame_cache_zalloc (struct frame_info *next_frame)
 
   this_trad_cache = FRAME_OBSTACK_ZALLOC (struct trad_frame_cache);
   this_trad_cache->prev_regs = trad_frame_alloc_saved_regs (next_frame);
+  this_trad_cache->next_frame = next_frame;
   return this_trad_cache;
 }
 
@@ -89,6 +98,13 @@ trad_frame_set_value (struct trad_frame_saved_reg this_saved_regs[],
 }
 
 void
+trad_frame_set_reg_addr (struct trad_frame_cache *this_trad_cache,
+			 int regnum, CORE_ADDR addr)
+{
+  this_trad_cache->prev_regs[regnum].addr = addr;
+}
+
+void
 trad_frame_set_unknown (struct trad_frame_saved_reg this_saved_regs[],
 			int regnum)
 {
@@ -141,4 +157,30 @@ trad_frame_prev_register (struct frame_info *next_frame,
       error ("Register %s not available",
 	     gdbarch_register_name (gdbarch, regnum));
     }
+}
+
+void
+trad_frame_get_register (struct trad_frame_cache *this_trad_cache,
+			 struct frame_info *next_frame,
+			 int regnum, int *optimizedp,
+			 enum lval_type *lvalp, CORE_ADDR *addrp,
+			 int *realregp, void *bufferp)
+{
+  trad_frame_prev_register (next_frame, this_trad_cache->prev_regs,
+			    regnum, optimizedp, lvalp, addrp, realregp,
+			    bufferp);
+}
+
+void
+trad_frame_set_id (struct trad_frame_cache *this_trad_cache,
+		   struct frame_id this_id)
+{
+  this_trad_cache->this_id = this_id;
+}
+
+void
+trad_frame_get_id (struct trad_frame_cache *this_trad_cache,
+		   struct frame_id *this_id)
+{
+  (*this_id) = this_trad_cache->this_id;
 }
